tests/snapshots/snapshot_tests__array_zero_sum_m2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_zero_sum_m2.vmt",
    status: Good,
    used_instantiations: [],
}
